Updated start and end image parameters

--- a/terrain_obstacles/Heightmap_Generator.ipynb
+++ b/terrain_obstacles/Heightmap_Generator.ipynb
@@ -113,8 +113,8 @@
    ],
    "source": [
     "# Parameters\n",
-    "startImages = 0 # Prob need to rerun 0-5000 to have proper all terrain (e.g. rectangle, ramp, etc.)\n",
-    "endImages = 5000\n",
+    "startImages = 5001 # Prob need to rerun 0-5000 to have proper all terrain (e.g. rectangle, ramp, etc.)\n",
+    "endImages = 5002 # Current end: 5000\n",
     "\n",
     "\n",
     "xpix, ypix = 250, 250\n",
