--- a/obstacles_only/Heightmap_Generator_obstacles_only.ipynb
+++ b/obstacles_only/Heightmap_Generator_obstacles_only.ipynb
@@ -39,16 +39,10 @@
     "    y = np.arange(0, 250)\n",
     "    mask = (x[np.newaxis,:]-center[0])**2 + (y[:,np.newaxis]-center[1])**2 < radius**2\n",
     "    \n",
-    "    return heightMap*mask, mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1c047185",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return heightMap*mask, mask\n",
+    "\n",
+    "# ############################################################################################################\n",
+    "\n",
     "def primitiveCircle(center : tuple, radius : int, heightMap):\n",
     "    x = np.arange(0, 250)\n",
     "    y = np.arange(0, 250)\n",
@@ -59,16 +53,10 @@
     "    heightMap[mask] = 255 # * random.randrange(2)\n",
     "    \n",
     "\n",
-    "    return heightMap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "23af2cb9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return heightMap\n",
+    "\n",
+    "# ############################################################################################################\n",
+    "\n",
     "def rectangle(heightMap):\n",
     "    mask = np.zeros((250, 250), dtype=np.uint8)\n",
     "    x=random.randrange(0+10,250-10)\n",
@@ -83,16 +71,10 @@
     "    isExtrusion = 1 # random.randrange(2)\n",
     "    \n",
     "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))\n",
-    "#     return points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c6ff5914",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     return points\n",
+    "\n",
+    "# ############################################################################################################\n",
+    "\n",
     "def convex(heightMap):\n",
     "    mask = np.zeros((250, 250), dtype=np.uint8)\n",
     "    numPoints = random.randrange(4,7)\n",
@@ -108,16 +90,10 @@
     "    isExtrusion = 1 # random.randrange(2)\n",
     "    \n",
     "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))\n",
-    "#     return points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "309fc1d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#     return points\n",
+    "\n",
+    "# ############################################################################################################\n",
+    "\n",
     "def nonConvex(heightMap):\n",
     "    mask = np.zeros((250, 250), dtype=np.uint8)\n",
     "    numPoints = random.randrange(4,7)\n",
@@ -130,7 +106,9 @@
     "    cv2.fillPoly(mask, points[np.newaxis,:], (1)) #new axis is to get in correct array format\n",
     "    isExtrusion = 1 # random.randrange(2)\n",
     "    \n",
-    "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))"
+    "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))\n",
+    "\n",
+    "# ############################################################################################################\n"
    ]
   },
   {
@@ -353,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
