--- a/Data_pix2pix.ipynb
+++ b/Data_pix2pix.ipynb
@@ -1321,7 +1321,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('tf-gpu')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1335,7 +1335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
