--- a/terrain_obstacles/Heightmap_Generator.ipynb
+++ b/terrain_obstacles/Heightmap_Generator.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3e74a53b",
+   "execution_count": 2,
+   "id": "bb2411e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,258 +14,66 @@
     "import os\n",
     "import pathlib\n",
     "import numpy as np\n",
-    "from PIL import Image\n",
-    "# from descartes import PolygonPatch\n",
-    "# import alphashape\n",
-    "#import cartopy.crs as ccrs\n",
-    "from scipy.spatial import ConvexHull\n",
-    "\n",
-    "import cv2\n",
-    "#import warning"
+    "from PIL import Image\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3ee199bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def centerMask(heightMap):\n",
-    "    center = (125, 125)\n",
-    "    radius = 15\n",
-    "    \n",
-    "    x = np.arange(0, 250)\n",
-    "    y = np.arange(0, 250)\n",
-    "    mask = (x[np.newaxis,:]-center[0])**2 + (y[:,np.newaxis]-center[1])**2 < radius**2\n",
-    "    \n",
-    "    return heightMap*mask, mask\n",
-    "\n",
-    "# ############################################################################################################\n",
-    "\n",
-    "def primitiveCircle(center : tuple, radius : int, heightMap):\n",
-    "    x = np.arange(0, 250)\n",
-    "    y = np.arange(0, 250)\n",
-    "\n",
-    "    # The two lines below could be merged, but I stored the mask\n",
-    "    # for code clarity.\n",
-    "    mask = (x[np.newaxis,:]-center[0])**2 + (y[:,np.newaxis]-center[1])**2 < radius**2\n",
-    "    heightMap[mask] = 255 #* random.randrange(2)\n",
-    "    \n",
-    "\n",
-    "    return heightMap\n",
-    "\n",
-    "# ############################################################################################################\n",
-    "\n",
-    "def rectangle(heightMap):\n",
-    "    mask = np.zeros((250, 250), dtype=np.uint8)\n",
-    "    x=random.randrange(0+10,250-10)\n",
-    "    y=random.randrange(0+10,250-10)\n",
-    "    width=random.randrange(10,15)\n",
-    "    height=random.randrange(10,15)\n",
-    "    angle=random.randrange(0,45)\n",
-    "    rect = plt.Rectangle((x,y), width, height, angle=angle)\n",
-    "    points = rect.get_verts().astype(np.int32)\n",
-    "    \n",
-    "    cv2.fillPoly(mask, points[np.newaxis,:], (1)) #new axis is to get in correct array format\n",
-    "    isExtrusion = 1 # random.randrange(2)\n",
-    "    \n",
-    "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))\n",
-    "#     return points\n",
-    "\n",
-    "# ############################################################################################################\n",
-    "\n",
-    "def convex(heightMap):\n",
-    "    mask = np.zeros((250, 250), dtype=np.uint8)\n",
-    "    numPoints = random.randrange(4,7)\n",
-    "    points = np.array([[random.randrange(250), random.randrange(250)]])\n",
-    "    for i in range(numPoints):\n",
-    "        xdelta = random.randrange(-10,10)\n",
-    "        ydelta = random.randrange(-10,10)\n",
-    "        points = np.append(points, points[i,:] + [[xdelta, ydelta]], axis=0)\n",
-    "    points=(np.int32(points))\n",
-    "    pvs=ConvexHull(points).vertices\n",
-    "    points=points[pvs]\n",
-    "    cv2.fillPoly(mask, points[np.newaxis,:], (1)) #new axis is to get in correct array format\n",
-    "    isExtrusion = 1 # random.randrange(2)\n",
-    "    \n",
-    "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))\n",
-    "#     return points\n",
-    "\n",
-    "# ############################################################################################################\n",
-    "\n",
-    "def nonConvex(heightMap):\n",
-    "    mask = np.zeros((250, 250), dtype=np.uint8)\n",
-    "    numPoints = random.randrange(4,7)\n",
-    "    points = np.array([[random.randrange(250), random.randrange(250)]])\n",
-    "    for i in range(numPoints):\n",
-    "        xdelta = random.randrange(-10,10)\n",
-    "        ydelta = random.randrange(-10,10)\n",
-    "        points = np.append(points, points[i,:] + [[xdelta, ydelta]], axis=0)\n",
-    "    points=(np.int32(points))\n",
-    "    cv2.fillPoly(mask, points[np.newaxis,:], (1)) #new axis is to get in correct array format\n",
-    "    isExtrusion = 1 #random.randrange(2)\n",
-    "    \n",
-    "    return (heightMap*(1-mask) + np.uint8(255*(mask)*isExtrusion))\n",
-    "\n",
-    "# ############################################################################################################\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "d87f2dc1",
+   "execution_count": 60,
+   "id": "5f6f6adb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory already exists...\n",
+      "Number of Terrains Generated: 100\n",
       "<<<<<<<<<<<<<<<//////////////////// Done Generating Terrains \\\\\\\\\\\\\\\\\\\\\\\\>>>>>>>>>>>>>>>>>>>>\n"
      ]
     }
    ],
    "source": [
-    "# Parameters\n",
-    "startImages = 0 # Prob need to rerun 0-5000 to have proper all terrain (e.g. rectangle, ramp, etc.)\n",
-    "endImages = 2000 # Current end: 5000\n",
-    "\n",
-    "\n",
-    "xpix, ypix = 250, 250\n",
-    "imageScale = 0.5\n",
-    "\n",
-    "octaves = 4\n",
-    "\n",
-    "obstacleName = \"all\" # Don't change this s.t. generate terrain and obstacles\n",
-    "\n",
-    "# Set parameters\n",
-    "maxRadius = 0\n",
-    "minRadius = 0\n",
-    "minPrimCircle =0\n",
-    "maxPrimCircle = 0\n",
-    "minNonConvex = 0\n",
-    "maxNonConvex = 0\n",
-    "minRect = 0\n",
-    "maxRect = 0\n",
-    "minConvex = 0\n",
-    "maxConvex = 0\n",
-    "\n",
-    "if obstacleName == \"rectangle\":\n",
-    "    minRect = 7\n",
-    "    maxRect = 15\n",
-    "elif obstacleName == \"circle\":\n",
-    "    maxRadius = 10\n",
-    "    minRadius = 5\n",
-    "    minPrimCircle = 7\n",
-    "    maxPrimCircle = 15\n",
-    "elif obstacleName == \"ramp\":\n",
-    "    print(\"ok\")\n",
-    "elif obstacleName == \"nonconvex\":\n",
-    "    minNonConvex = 7\n",
-    "    maxNonConvex = 15\n",
-    "elif obstacleName == \"all\":\n",
-    "    maxRadius = 10\n",
-    "    minRadius = 7\n",
-    "    minPrimCircle = 2\n",
-    "    maxPrimCircle = 4\n",
-    "    minNonConvex = 0\n",
-    "    maxNonConvex = 0\n",
-    "    minRect = 2\n",
-    "    maxRect = 4\n",
-    "    minConvex = 2\n",
-    "    maxConvex = 4\n",
-    "else:\n",
-    "    raise Exception(\"Not valid obstacle name\")\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "\n",
     "path=os.getcwd()\n",
-    "folder_path=path+(f'/heightmaps/%s/Octave %d/train data/inputs/' % (obstacleName, octaves))\n",
-    "\n",
-    "\n",
-    "try:\n",
-    "    os.makedirs(folder_path)\n",
-    "except:\n",
-    "    print(\"Directory already exists...\")\n",
-    "\n",
-    "# data_dir=pathlib.Path(path+'/heightmaps/octaves 3/test data/inputs')\n",
+    "# data_dir=pathlib.Path(path+'/big_heightmaps')\n",
     "random.seed(int(time.time()))\n",
     "\n",
-    "prevTime = time.time()\n",
-    "for img_num in range(startImages, endImages):\n",
+    "octaves = 6\n",
+    "\n",
+    "for img_num in range(100):\n",
     "    seed = random.randrange(100000000)\n",
     "    noise = PerlinNoise(octaves=octaves, seed=seed)\n",
+    "    xpix, ypix = 121, 121\n",
     "    pic = [[noise([i/xpix, j/ypix]) for j in range(xpix)] for i in range(ypix)]\n",
     "    \n",
-    "    pic_np = (np.array(pic)).reshape((xpix,ypix))\n",
+    "#     img_path = pathlib.Path(path+str(octaves)+'/O'+str(octaves)+'_'+str(img_num+1)+'.png')\n",
+    "\n",
+    "    pic_np = (np.array(pic)).reshape((121,121))\n",
     "    p_max = np.max(pic_np)\n",
     "    p_min = np.min(pic_np)\n",
     "    if p_max-p_min>1:\n",
-    "        pic_np = (((pic_np-p_min)/(p_max-p_min))*imageScale*255).astype('uint8')\n",
-    "    else: pic_np = ((pic_np-p_min)*imageScale*255).astype('uint8')\n",
-    "    \n",
-    "    if obstacleName != \"all\":\n",
-    "        pic_np = (pic_np*0 + 25).astype('uint8') # Reset map to flat terrain\n",
-    "    pic_np_center, center_mask = centerMask(pic_np)\n",
-    "    \n",
-    "    if maxPrimCircle > 0:\n",
-    "        numOfPrimCircle = random.randrange(minPrimCircle, maxPrimCircle)\n",
-    "        for i in range(numOfPrimCircle):\n",
-    "            #print(randCenter)\n",
-    "            randCenter = (random.randrange(xpix), random.randrange(ypix))\n",
-    "            randRadius = random.randrange(minRadius, maxRadius)\n",
-    "            pic_np = primitiveCircle(randCenter, randRadius, pic_np)\n",
-    "    if maxNonConvex > 0:\n",
-    "        numOfNonConvex = random.randrange(minNonConvex, maxNonConvex)\n",
-    "        for j in range(numOfNonConvex):\n",
-    "            pic_np = nonConvex(pic_np)\n",
-    "    if maxRect > 0:\n",
-    "        numOfRect = random.randrange(minRect, maxRect)\n",
-    "        for j in range(numOfRect):\n",
-    "            pic_np = rectangle(pic_np)\n",
-    "    if maxConvex > 0:\n",
-    "        numOfConvex = random.randrange(minConvex, maxConvex)\n",
-    "        for j in range(numOfConvex):\n",
-    "            pic_np = convex(pic_np)\n",
-    "    \n",
-    "    \n",
-    "    pic_np = np.uint8(pic_np*(1-center_mask) + pic_np_center)\n",
-    "    \n",
+    "        pic_np = (((pic_np-p_min)/(p_max-p_min))*255).astype('uint8')\n",
+    "    else: pic_np = ((pic_np-p_min)*255).astype('uint8')\n",
+    "#     img_max = np.max(np_img_mat)\n",
+    "#     img_min = np.min(np_img_mat)\n",
+    "#     np_img = ((np_img_mat-img_min)/(img_max-img_min)).astype('uint8')\n",
+    "\n",
     "    pil_img = Image.fromarray(pic_np, 'L')\n",
-    "    # img_path=folder_path+obstacleName[0]+'_O'+str(octaves)+'_H'+str(img_num+1)+'.png'\n",
-    "    img_path=folder_path+str(img_num+1)+'.png'\n",
+    "    img_path='O'+str(octaves)+'_'+str(img_num+1)+'.png'\n",
     "    pil_img.save(img_path)\n",
     "    \n",
-    "    \n",
-    "    if not (img_num+1)%200:\n",
+    "    if not (img_num+1)%100:\n",
     "        print(\"Number of Terrains Generated:\",img_num+1)\n",
-    "        currentTime = time.time()\n",
-    "        print(\"Duration: %0.3fs\" % (currentTime-prevTime))\n",
-    "        prevTime = currentTime\n",
     "    \n",
     "print(\"<<<<<<<<<<<<<<<//////////////////// Done Generating Terrains \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\>>>>>>>>>>>>>>>>>>>>\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "290c7a62",
+   "execution_count": null,
+   "id": "3a6f7a8f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/dira/Downloads/Sarang/sae_wcx_conference/Generative-Terrain-Reconstruction/terrain_obstacles/heightmaps/all/Octave 4/train data/inputs/\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(folder_path)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -285,11 +93,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "976180b2ecb65bd02dafd38ec3047f6bfe79dfa67fb40d92604bf35b01a83282"
-   }
   }
  },
  "nbformat": 4,
